--- a/ClassLibrary1/TravelExpertsData.csproj
+++ b/ClassLibrary1/TravelExpertsData.csproj
@@ -42,9 +42,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Package.cs" />
+    <Compile Include="PackageProductSupplier.cs" />
     <Compile Include="PackagesDB.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="ProductSupplier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Supplier.cs" />
     <Compile Include="TravelExpertsDB.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
