--- a/ClassLibrary1/TravelExpertsData.csproj
+++ b/ClassLibrary1/TravelExpertsData.csproj
@@ -45,9 +45,11 @@
     <Compile Include="PackageProductSupplier.cs" />
     <Compile Include="PackagesDB.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductsDB.cs" />
     <Compile Include="ProductSupplier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Supplier.cs" />
+    <Compile Include="SuppliersDB.cs" />
     <Compile Include="TravelExpertsDB.cs" />
   </ItemGroup>
   <ItemGroup>
