Updated code to work with uploading byte[] image to tables. Commenting.

--- a/ClassLibrary1/TravelExpertsData.csproj
+++ b/ClassLibrary1/TravelExpertsData.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,9 @@
     <Compile Include="PackagesDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelExpertsDB.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\DataSources\TravelExpertsData.Package.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
