--- a/TravelExpertsDatabaseManager/TravelExpertsDatabaseManager.csproj
+++ b/TravelExpertsDatabaseManager/TravelExpertsDatabaseManager.csproj
@@ -100,5 +100,9 @@
       <Name>TravelExpertsData</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="sql\customTravelExpertsDBv3.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
