--- a/TravelExpertsData/TravelExpertsData.csproj
+++ b/TravelExpertsData/TravelExpertsData.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Product.cs" />
     <Compile Include="ProductsDB.cs" />
     <Compile Include="ProductSupplier.cs" />
+    <Compile Include="ProductSupplierDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Supplier.cs" />
     <Compile Include="SuppliersDB.cs" />
