--- a/TravelExpertsData/TravelExpertsData.csproj
+++ b/TravelExpertsData/TravelExpertsData.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgentDB.cs" />
     <Compile Include="Package.cs" />
     <Compile Include="PackageProductSupplier.cs" />
     <Compile Include="PackagesProductsSuppliersDB.cs" />
