--- a/TravelExpertsDatabaseManager/TravelExpertsDatabaseManager.csproj
+++ b/TravelExpertsDatabaseManager/TravelExpertsDatabaseManager.csproj
@@ -74,6 +74,12 @@
       <DependentUpon>AddEditPackageForm.cs</DependentUpon>
     </Compile>
     <Compile Include="FindableBindingList.cs" />
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     <Compile Include="Validation.cs" />
     <EmbeddedResource Include="AddEditPackageForm.resx">
       <DependentUpon>AddEditPackageForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
