--- a/TravelExpertsData/TravelExpertsData.csproj
+++ b/TravelExpertsData/TravelExpertsData.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgentDB.cs" />
+    <Compile Include="HelperMethods.cs" />
     <Compile Include="Package.cs" />
     <Compile Include="PackagesProductsSuppliersDB.cs" />
     <Compile Include="PackagesDB.cs" />
